@startuml
' Título do Diagrama
title Diagrama de Entidade-Relacionamento (DER) - v2.0

' Definição de um tema para melhor visualização
skinparam linetype ortho
skinparam entity {
    BackgroundColor LightBlue
    BorderColor RoyalBlue
}

' Definição das Entidades (Tabelas)

entity "Usuario" as Usuario {
  + id: BIGINT <<PK>>
  --
  nome: VARCHAR(255)
  login: VARCHAR(120) <<UNIQUE>>
  senhaHash: VARCHAR(255)
  **tipo: VARCHAR(32) <<Discriminador>>**
}
note right of Usuario::tipo
  Esta coluna implementa a herança.
  Define se o usuário é 'ADMINISTRADOR'
  ou 'OPERADOR'.
end note

entity "AreaAgricola" as Area {
  + id: BIGINT <<PK>>
  --
  localizacao: VARCHAR(255)
  tamanho: DOUBLE
  tipoCultivo: VARCHAR(80)
}

entity "Drone" as Drone {
  + id: BIGINT <<PK>>
  --
  modelo: VARCHAR(120)
  status: VARCHAR(32)
}

entity "Checklist" as Checklist {
  + id: BIGINT <<PK>>
  --
  nivelBateria: INT
  sensoresOk: BOOLEAN
  conexaoRedeOk: BOOLEAN
  dataValidacao: TIMESTAMP
}

entity "Missao" as Missao {
  + id: BIGINT <<PK>>
  --
  dataHora: TIMESTAMP
  status: VARCHAR(32)
  --
  # id_area: BIGINT <<FK>>
  # id_drone: BIGINT <<FK>>
  # id_operador: BIGINT <<FK>>
  # id_checklist: BIGINT <<FK>> <<UNIQUE>>
}

entity "DadosColetados" as Dados {
  + id: BIGINT <<PK>>
  --
  imagem: BYTEA
  temperatura: DOUBLE PRECISION
  umidade: DOUBLE PRECISION
  dataHora: TIMESTAMP
  --
  # id_missao: BIGINT <<FK>>
}

' Definição dos Relacionamentos

Usuario ||--o{ Missao : "operador"
Area ||--o{ Missao : "área"
Drone ||--o{ Missao : "drone"
Checklist ||..o| Missao : "checklist"
Missao ||--o{ Dados : "missão"

@enduml
